@@ -132,6 +132,7 @@
       <class name="test.aftergroups.AfterGroupsBehaviorTest"/>
       <class name="test.testng285.TestNG285Test" />
       <class name="test.failedreporter.FailedReporterTest" />
+      <class name="test.failedreporter.issue2517.DataProviderWithFactoryFailedReporterTest" />
       <class name="test.attributes.AttributeTest"/>
       <class name="test.attributes.issue2346.IssueTest"/>
       <class name="test.verify.VerifyTest"/>
